Fix axioms being vertically misaligned with subtrees

--- a/webapp/stylesheet.css
+++ b/webapp/stylesheet.css
@@ -112,12 +112,12 @@ form {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 7px;
 }
 
 .annotation-axiom {
     align-self: end;
-    margin-bottom: 4px;
+    margin-bottom: 7px;
     font-size: 12px;
     color: var(--comment);
 }
@@ -143,7 +143,7 @@ form {
     background: var(--foreground);
     width: 100%;
     position: absolute;
-    bottom: 25px;
+    bottom: 27px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
